--- a/notebooks/02_model_training.ipynb
+++ b/notebooks/02_model_training.ipynb
@@ -1,48 +1,157 @@
-# 02 Model Training
-
-## 1. Import Libraries
-```python
-import tensorflow as tf
-from tensorflow.keras.applications.vgg16 import VGG16, preprocess_input
-from tensorflow.keras.models import Model
-from tensorflow.keras.layers import Input, Dense, Dropout, Embedding, LSTM, add
-from tensorflow.keras.preprocessing.text import Tokenizer
-from tensorflow.keras.preprocessing.sequence import pad_sequences
-import pickle, numpy as np, os
-
-with open("../data/Flickr8k_text/tokenizer.pkl", "rb") as f:
-    tokenizer = pickle.load(f)
-
-max_length = 37  # Based on preprocessing
-vocab_size = len(tokenizer.word_index) + 1
-
-with open("../data/features.pkl", "rb") as f:
-    features = pickle.load(f)
-
-with open("../data/Flickr8k_text/captions_mapping.json") as f:
-    mapping = json.load(f)
-
-def define_model(vocab_size, max_length):
-    inputs1 = Input(shape=(4096,))
-    fe1 = Dropout(0.5)(inputs1)
-    fe2 = Dense(256, activation='relu')(fe1)
-
-    inputs2 = Input(shape=(max_length,))
-    se1 = Embedding(vocab_size, 256, mask_zero=True)(inputs2)
-    se2 = Dropout(0.5)(se1)
-    se3 = LSTM(256)(se2)
-
-    decoder1 = add([fe2, se3])
-    decoder2 = Dense(256, activation='relu')(decoder1)
-    outputs = Dense(vocab_size, activation='softmax')(decoder2)
-
-    model = Model(inputs=[inputs1, inputs2], outputs=outputs)
-    model.compile(loss='categorical_crossentropy', optimizer='adam')
-    return model
-
-model = define_model(vocab_size, max_length)
-model.summary()
-
-# Placeholder for generator function and training loop
-# Save model
-model.save("../models/decoder/lstm_decoder.h5")
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 02 Model Training\n",
+    "\n",
+    "This notebook builds the CNN+LSTM model and trains it on Flickr8k dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "import pickle\n",
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.layers import Input, Dense, LSTM, Embedding, Dropout, add\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from tensorflow.keras.utils import to_categorical\n",
+    "from tensorflow.keras.optimizers import Adam"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load Preprocessed Data and Tokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../data/Flickr8k_text/mapping.pkl', 'rb') as f:\n",
+    "    mapping = pickle.load(f)\n",
+    "\n",
+    "with open('../data/Flickr8k_text/features.pkl', 'rb') as f:\n",
+    "    features = pickle.load(f)\n",
+    "\n",
+    "with open('../data/Flickr8k_text/tokenizer.pkl', 'rb') as f:\n",
+    "    tokenizer = pickle.load(f)\n",
+    "\n",
+    "vocab_size = len(tokenizer.word_index) + 1\n",
+    "max_length = max(len(caption.split()) for captions in mapping.values() for caption in captions)\n",
+    "print(f\"Vocab Size: {vocab_size}, Max Length: {max_length}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Generator for Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def data_generator(data_keys, mapping, features, tokenizer, max_length, vocab_size, batch_size):\n",
+    "    X1, X2, y = list(), list(), list()\n",
+    "    n = 0\n",
+    "    while True:\n",
+    "        for key in data_keys:\n",
+    "            captions = mapping[key]\n",
+    "            for caption in captions:\n",
+    "                seq = tokenizer.texts_to_sequences([caption])[0]\n",
+    "                for i in range(1, len(seq)):\n",
+    "                    in_seq, out_seq = seq[:i], seq[i]\n",
+    "                    in_seq = pad_sequences([in_seq], maxlen=max_length)[0]\n",
+    "                    out_seq = to_categorical([out_seq], num_classes=vocab_size)[0]\n",
+    "                    X1.append(features[key][0])\n",
+    "                    X2.append(in_seq)\n",
+    "                    y.append(out_seq)\n",
+    "            n += 1\n",
+    "            if n == batch_size:\n",
+    "                yield [np.array(X1), np.array(X2)], np.array(y)\n",
+    "                X1, X2, y = list(), list(), list()\n",
+    "                n = 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define CNN+LSTM Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs1 = Input(shape=(4096,))\n",
+    "fe1 = Dropout(0.5)(inputs1)\n",
+    "fe2 = Dense(256, activation='relu')(fe1)\n",
+    "\n",
+    "inputs2 = Input(shape=(max_length,))\n",
+    "se1 = Embedding(vocab_size, 256, mask_zero=True)(inputs2)\n",
+    "se2 = Dropout(0.5)(se1)\n",
+    "se3 = LSTM(256)(se2)\n",
+    "\n",
+    "decoder1 = add([fe2, se3])\n",
+    "decoder2 = Dense(256, activation='relu')(decoder1)\n",
+    "outputs = Dense(vocab_size, activation='softmax')(decoder2)\n",
+    "\n",
+    "model = Model(inputs=[inputs1, inputs2], outputs=outputs)\n",
+    "model.compile(loss='categorical_crossentropy', optimizer=Adam(learning_rate=0.001))\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = list(mapping.keys())[:6000]\n",
+    "steps = len(train) // 64\n",
+    "generator = data_generator(train, mapping, features, tokenizer, max_length, vocab_size, 64)\n",
+    "model.fit(generator, epochs=10, steps_per_epoch=steps, verbose=1)\n",
+    "\n",
+    "model.save('../models/decoder/caption_model.h5')\n",
+    "print(\"Model saved at ../models/decoder/caption_model.h5\")"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.10"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
